# illustrator-mcp-server

./: README.md  pyproject.toml
src/illustrator/: server.py
